--- a/data_types_in_python.ipynb
+++ b/data_types_in_python.ipynb
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -379,6 +379,34 @@
     "myList = [True, 6<5, 1==3, None is None]\n",
     "for element in myList:\n",
     "    print(type(element))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sum(myList)/len(myList))\n",
+    "type(sum(myList)/len(myList))"
    ]
   },
   {
